--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Python tests
+        env:
+          # Ensure tests can import modules from the repository root
+          PYTHONPATH: ${{ github.workspace }}
         run: |
           pytest -q
 
